--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "saas_landing_page",
+  "homepage": "https://github.com/kottarivaibhav/xora",
+  "name": "xora",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,10 +8,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "gh-pages": "^6.3.0",
+    "i": "^0.3.7",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
